# repo-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  leak-probe.txt
.github/: CODEOWNERS.tmpl  PULL_REQUEST_TEMPLATE.md  dependabot.yml  sca-policy.json
.github/rulesets/: org-ruleset.json  repo-ruleset.json
.github/workflows/: guard-base-branch.yml  sca.yml  secret-scan.yml  template-tests.yml
docs/: ADOPTION.md
docs/notes/: README.md
docs/superpowers/handoffs/: README.md
docs/superpowers/plans/: 2026-07-13-avenue-z-repo-template.md  2026-07-16-sca-dependency-scanning.md  README.md
docs/superpowers/specs/: 2026-07-13-avenue-z-repo-template-design.md  2026-07-14-next-stack-vercel-design.md  2026-07-15-front-door-readme-adoption.md  2026-07-16-hardening-additions-sca-and-supply-chain-design.md  2026-07-16-item-4-sast-and-team-cutover-design.md  README.md
scripts/: apply-org-ruleset.sh  apply-rulesets.sh  bandit-gate.sh  check-base-branch.sh  ci-aggregate-gate.sh  init-repo.sh  link-vercel.sh  sca-gate.sh
template-docs/: README.md
template-docs/plans/: 2026-07-13-avenue-z-repo-template.md  2026-07-16-item-4-part-a-bandit-sast.md  2026-07-16-sha-pin-actions.md
template-docs/reviews/: 2026-07-16-review-vercel-and-tests.md
template-docs/specs/: 2026-07-13-avenue-z-repo-template-design.md
template-tests/: lib.sh  test_action_pins.sh  test_apply_org_ruleset.sh  test_apply_rulesets.sh  test_bandit.sh  test_gitignore.sh  test_guard_matrix.sh  test_init_repo.sh  test_link_vercel.sh  test_next_stack.sh  test_rulesets.sh  test_runner_integrity.sh  test_sca.sh  test_secret_scan.sh
templates/next/: eslint.config.mjs  package-lock.json  package.json  vitest.config.ts
templates/next/.github/workflows/: ci.yml
templates/next/src/app/: layout.tsx  page.tsx
templates/next/tests/: smoke.test.ts
templates/node/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
templates/node/.github/workflows/: ci.yml
templates/node/tests/: smoke.test.ts
templates/python/: .dockerignore  Dockerfile  pyproject.toml
templates/python/.github/workflows/: ci.yml
templates/python/tests/: conftest.py  test_smoke.py
tests/: lib.sh  test_apply_rulesets.sh  test_gitignore.sh  test_guard_matrix.sh  test_init_repo.sh  test_rulesets.sh
