[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
version = "0.1.0"
description = "TODO"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# pre-commit is here because README's Setup step runs `pre-commit install` — the step that
# installs the gitleaks hook, i.e. the one local security control. Without it in dev, a new
# engineer following Setup verbatim gets `command not found` on exactly that line.
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "pre-commit>=3.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
