[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
version = "0.1.0"
description = "TODO"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# pre-commit is here because README's Setup step runs `pre-commit install` — the step that
# installs the gitleaks hook, i.e. the one local security control. Without it in dev, a new
# engineer following Setup verbatim gets `command not found` on exactly that line.
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "pre-commit>=3.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Fail loud, not silent: --strict-config errors on a mistyped/unknown config key, --strict-markers
# on an unregistered marker. Both are the class of error that otherwise erodes the "tests ran and
# were configured as intended" guarantee by passing green. (design Item 2)
addopts = "--strict-config --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.bandit]
# Bandit (Item 4 Part A SAST) config home — the stack keeps tool config here, like ruff/mypy above.
# CI already scopes the scan to first-party source with `bandit -r src`; tests legitimately use
# `assert` and subprocess in ways that are not production risks, so they are not scanned. Suppress an
# individual finding in-code with `# nosec <TEST_ID>` (reviewed in the diff) — see SECURITY.md for
# why a suppression here is a silent, un-expiring hole. Add long-lived, team-agreed skips below.
exclude_dirs = ["tests"]
